[build-system]
requires = ["setuptools >= 82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengood.py_ml_plot"
version = "2.5.0"
description = "Modules containing reusable functions for machine learning visualization plotting"
authors = [
    { name = "OpenGood", email = "ai@opengood.ai" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "matplotlib >= 3.10.8",
    "numpy >= 2.4.3",
    "pandas >= 3.0.1",
    "scikit-learn >= 1.8.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools >= 7.5.3",
    "pytest >= 9.0.2",
    "pytest-cov >= 7.0.0",
]

[project.urls]
Homepage = "https://github.com/opengood-ai/py-ml-plot"
Documentation = "https://github.com/opengood-ai/py-ml-plot"

[tool.pytest.ini_options]
addopts = "-v --cov=src.opengood.py_ml_plot --cov-report=xml --cov-fail-under=70"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "slow: mark tests as slow",
    "smoke: mark tests as smoke tests",
    "unit: mark tests as unit tests"
]
cov_report = "term-missing"
cov_report_term = "term-missing:skip-covered"
cov_report_xml = "coverage.xml"
norecursedirs = [".git", ".tox", ".venv"]
filterwarnings = "ignore::DeprecationWarning"
log_cli = true
log_cli_level = "INFO"

